# mail

./: .gitignore  a  email_first500.html  generate-latest.cjs  generate-latest.js  hatalimailornek.html  index.html  notification.html  package-lock.json  package.json  releaseyayınlamarehberi  tailwind.config.js  vite.config.ts
.agents/workflows/: plan.md
.github/workflows/: release.yml
src/: App.tsx  NotificationWindow.tsx  i18n.ts  index.css  notification-entry.tsx  theme.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  db.rs  gmail.rs  img_proxy.rs  lib.rs  main.rs  notify.rs  window_state.rs
src/components/: ComposeModal.tsx  EmailList.tsx  EmailReader.tsx  Onboarding.tsx  SettingsPanel.tsx  Sidebar.tsx
