[package]
name = "fursoy-mail"
version = "1.4.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fursoy_mail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1.37", features = ["full"] }
base64 = "0.22"
futures = "0.3"
dotenvy = "0.15"
keyring = { version = "3", features = ["windows-native"] }
rand = "0.8"
sha2 = "0.10"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_Security"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
